--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,3 +2,13 @@
     font-size: 0.7rem;
     font-weight: bold;
 }
+
+.title {
+  margin-top: 3rem;
+}
+
+.subtitle {
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
+  font-size: 1.2rem;
+}
